infrastructure/base/authen/httproute.yaml
---
# Source: internal-authen/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-authen
  namespace: cluster-authentication
spec:
  hostnames:
  - authen.homelab.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: networking-stack
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: release-name-keycloakx-http
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
